# opengl-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
assets/model/: ground.mtl  rock2.mtl  vehicle.mtl  vehicle_light_one.mtl  wires.mtl
assets/shaders/: env_map_vert.glsl  model_frag.glsl  model_vert.glsl  skybox_vert.glsl
assets/sound/: wind.snd
include/: thread_manager.h
project/: CMakeLists.txt
project/assets/: main_frag.glsl  object.fs  object.vs  skybox.fs  skybox.vs
project/assets/model/: bush.mtl  cactus_8.mtl  lamp_light_two.mtl  rock_4.mtl  rock_7.mtl  scene.mtl  ufo_light.mtl
project/assets/shaders/: env_map_frag.glsl  env_map_vert.glsl  light_frag.glsl  light_vert.glsl  model_frag.glsl  window_frag.glsl
project/assets/sound/: ufo.snd
project/include/: defines.h  project.h  window.h
project/include/audio/: audio_device.h
project/include/io/: keyboard.h  mouse.h
project/include/other/glad/: glad.h
project/include/primitive/: cube.h
project/include/render/: mesh.h  model.h  shadowmap.h  skybox.h
project/include/render_util/: camera.h  shader.h  texture.h
project/include/sound/: sound_buffer.h  sound_device.h  sound_source.h
project/src/: project.cpp  window.cpp
project/src/audio/: audio_device.cpp
project/src/io/: keyboard.cpp  mouse.cpp
project/src/other/: glad.c  stb.cpp
project/src/primitive/: cube.cpp
project/src/render/: mesh.cpp  model.cpp  shadowmap.cpp  skybox.cpp
project/src/render_util/: camera.cpp  shader.cpp  texture.cpp
project/src/sound/: sound_buffer.cpp  sound_device.cpp  sound_source.cpp
src/: thread_manager.cpp
